fix project info overflow

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -372,7 +372,7 @@ body {
 }
 
 .project-info {
-  height: 100%;
+  height: 60vh;
   overflow: auto;
 }
 
